force-app/main/default/objects/Opportunity_Market__c/Opportunity_Market__c.object-meta.xml
<CustomObject>
    <label>Opportunity Market</label>
    <nameField>
        <displayFormat>OppMrk-{0000000}</displayFormat>
        <label>Opportunity Market Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Markets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>