force-app/main/default/objects/Opportunity_Market__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Opportunity Markets</relationshipLabel>
    <relationshipName>Opportunity_Markets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>