force-app/main/default/objects/Opportunity_Market__c/fields/Multifamily_New_Construction_Project__c.field-meta.xml
<CustomField>
    <fullName>Multifamily_New_Construction_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Multifamily New Construction Project</label>
    <referenceTo>Multifamily_New_Construction_Project__c</referenceTo>
    <relationshipLabel>Opportunity Markets</relationshipLabel>
    <relationshipName>Opportunity_Markets</relationshipName>
    <type>Lookup</type>
</CustomField>